Deal with unconfirmed users
