# infrastructure-modules/api/manager/api.yaml
@@ -438,7 +438,7 @@ paths:
         - CognitoUserProvider: []
       tags:
         - User
-      summary: Reset a user's password
+      summary: Manually confirm a user's email address
       operationId: managerConfirmEmailUserById
       consumes:
         - application/x-www-form-urlencoded
@@ -462,6 +462,82 @@ paths:
           description: Validation exception
       x-amazon-apigateway-integration:
         uri: ${lambda_uri_managerConfirmEmailUserById}
+        responses:
+          default:
+            statusCode: '200'
+        passthroughBehavior: 'NEVER'
+        httpMethod: 'POST'
+        type: 'aws_proxy'
+    options:
+      summary: CORS support
+      description: |
+        Enable CORS by returning correct headers
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      tags:
+        - CORS
+      x-amazon-apigateway-integration:
+        type: mock
+        requestTemplates:
+          application/json: |
+            {
+              "statusCode" : 200
+            }
+        responses:
+          'default':
+            statusCode: '200'
+            responseParameters:
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,AcceptedVersions'"
+              method.response.header.Access-Control-Allow-Methods: "'*'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Max-Age: "'86400'"
+            responseTemplates:
+              application/json: |
+                {}
+      responses:
+        200:
+          description: Default response for CORS method
+          headers:
+            Access-Control-Allow-Headers:
+              type: 'string'
+            Access-Control-Allow-Methods:
+              type: 'string'
+            Access-Control-Allow-Origin:
+              type: 'string'
+            Access-Control-Max-Age:
+              type: 'string'
+  /manager/user/byId/{poolId}/{username}/resendConfirmationEmail:
+    post:
+      security:
+        - CognitoUserProvider: []
+      tags:
+        - User
+      summary: Resend the confirmation email to a user
+      operationId: managerResendConfirmationEmailUserById
+      consumes:
+        - application/x-www-form-urlencoded
+      produces:
+        - application/json
+      parameters:
+        - name: poolId
+          in: path
+          description: The pool ID of this user
+          required: true
+          type: string
+        - name: username
+          in: path
+          description: ID of the user to return
+          required: true
+          type: string
+      responses:
+        404:
+          description: User not found
+        405:
+          description: Validation exception
+      x-amazon-apigateway-integration:
+        uri: ${lambda_uri_managerResendConfirmationEmailUserById}
         responses:
           default:
             statusCode: '200'
